app/indexer/testnet/patch-indexer-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: indexer
  namespace: kaspa
spec:
  serviceName: dev-indexer
  selector:
    matchLabels:
      app: dev-indexer
  template:
    metadata:
      labels:
        app: dev-indexer
    spec:
      containers:
        - name: indexer
---
apiVersion: v1
kind: Service
metadata:
  name: indexer
  labels:
    app: dev-indexer
  namespace: kaspa
spec:
  selector:
    app: dev-indexer
